--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"private": true,
 	"license": "UNLICENSED",
 	"scripts": {
+		"install": "npm install --legacy-peer-deps",
 		"prebuild": "rimraf dist",
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
