--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"license": "UNLICENSED",
 	"scripts": {
 		"prebuild": "rimraf dist",
+		"railway:install": "npm install --legacy-peer-deps",
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "nest start",
