--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
 		"strict": true,
 		"strictPropertyInitialization": false,
 		"paths": {
-			"@/*": ["src/*"],
-			"@/auth/*": ["src/auth/*"]
+			"@/*": ["src/*"]
 		}
 	}
 }
