--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
 		"dayjs": "^1.10.7",
+		"express": "^5.1.0",
 		"fs-extra": "^10.0.0",
 		"mongoose": "^6.1.1",
 		"nestjs-typegoose": "^7.1.38",
@@ -54,7 +55,7 @@
 		"@nestjs/testing": "^8.0.0",
 		"@types/app-root-path": "^1.2.4",
 		"@types/bcryptjs": "^2.4.2",
-		"@types/express": "^4.17.13",
+		"@types/express": "^4.17.23",
 		"@types/fs-extra": "^9.0.13",
 		"@types/jest": "27.0.2",
 		"@types/mongoose": "^5.11.97",
