--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,6 @@
-MONGO_URI=mongodb+srv://xOneVamp1re:Mq632eiavZJ@animecinema.1q7hm2s.mongodb.net/AnimeCinema?retryWrites=true&w=majority
-PORT=4200
-CLIENT_URL=https://frontend-5s9m.vercel.app
+
 NODE_ENV=production
+CLIENT_URL=https://frontend-5s9m.vercel.app
+PORT=4200
+DATABASE_URL=mongodb+srv://xOneVamp1re:Mq632eiavZJ@animecinema.1q7hm2s.mongodb.net/AnimeCinema?retryWrites=true&w=majority
+JWT_SECRET=Mq632eiavZJ9636531alex
